cmake_minimum_required(VERSION 3.15)
project(DataStructuresCourse CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "*.cpp")
foreach(SRC ${SRC_FILES})
    file(RELATIVE_PATH REL ${CMAKE_SOURCE_DIR} ${SRC})
    string(REPLACE "/" "_" EXE ${REL})
    string(REPLACE ".cpp" "" EXE ${EXE})
    add_executable(${EXE} ${SRC})
    set_target_properties(${EXE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/${CMAKE_CFG_INTDIR}")
endforeach()
